# smart_memory_location

./: .gitignore  .projectile  .travis.yaml  .travis.yml  CMakeLists.txt  ModuleDefinitions.cmake  README.md  README.org  build.sh  build_and_run.sh  run.sh
include/: allocators.hpp  containers.hpp  fallback_allocator.hpp  freelist_allocator.hpp  mallocator.hpp  map.hpp  memory.hpp  platform.hpp  scope_guards.hpp  stack_allocator.hpp  string.hpp  types.hpp  utils.hpp  vector.hpp
include/allocators/: arena_allocator.hpp  bump_allocator.hpp  cascade_allocator.hpp  fallback_allocator.hpp  general_allocator.hpp  linear_allocator.hpp  malloc_allocator.hpp  segregator_allocator.hpp  stack_allocator.hpp  tracking_allocator.hpp
include/containers/: list.hpp  map.hpp  string.hpp  stringmap.hpp  stringview.hpp  tempmap.hpp  tempstring.hpp  tempvector.hpp  vector.hpp
lib/: CMakeLists.txt
lib/SpookyHash/: SpookyV2.h
src/: SpookyV2.cpp  main.cpp  salloc.cpp  scont.cpp  splat.cpp  talloc.cpp
test/: CMakeLists.txt  memory_test.cpp
tests/: CMakeLists.txt  unit_tests.cpp
